--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,8 @@
   </main>
 
 <footer class="bg-dark text-white p-3 text-center">
-  <p>Rodapé do site - © 2024</p>
+  <p>Todos os direitos reservados a CaioS. Desenvolviment . - © 2024</p>
 </footer>
-
 
   <script src="scripts/script.js"></script>
 
